# BingoBookCreator

./: .gitignore  README.md
BingoBookCreator/: BingoBookCreator.sln  CMakeLists.txt
BingoBookCreator/BingoBookCreator/: BingoBook.cpp  BingoBook.h  BingoBookCreator.vcxproj  BingoBookCreator.vcxproj.filters  main.cpp
BuildRlease/: .ninja_deps  .ninja_log  BingoBookCreator  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
BuildRlease/.cmake/api/v1/reply/: cache-v2-57eab5652f682cbdadae.json  cmakeFiles-v1-ac96443d6a488bbe1f36.json  codemodel-v2-c0e0c8de39e38e31126e.json  index-2025-06-28T17-54-29-0577.json  target-BingoBookCreator-Debug-619ee78b92cf20f0895a.json  target-pdf_support-Debug-81f752e762226ecf5b54.json
PDF_Support/: PDF_Support.cpp  PDF_Support.vcxproj  PDF_Support.vcxproj.filters  pch.h
PDF_Support/Include/: hpdf.h
PDF_Support/Source/: hpdf_3dmeasure.c  hpdf_annotation.c  hpdf_array.c  hpdf_binary.c  hpdf_boolean.c  hpdf_catalog.c  hpdf_doc.c
PDF_Support/lib/: PDF_Support.idb  PDF_Support.lib
